# manim-shapes-assignment

./: README.org  main.py  manim.cfg  pyproject.toml  requirements.txt  temp.py  triangle.ini  triangle.py  triangle_gen.py
