[tool.poetry]
name = "manim-shapes"
version = "0.1.0"
description = ""
authors = ["hemanta212 <sharmahemanta.212@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
manim = "^0.7.0"

[tool.poetry.dev-dependencies]
rich = "^10.4.0"
ptpython = "^3.0.18"
black = "^21.6b0"
isort = "^5.9.1"
autopep8 = "^1.5.7"
importmagic = "^0.1.7"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
